--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "prisma generate && next dev",
     "build": "prisma generate && prisma db push && next build",
+    "migrate:postgres": "dotenv -e .env.local -- npx prisma migrate dev",
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
@@ -28,7 +29,7 @@
     "lucide-react": "0.105.0-alpha.4",
     "ms": "^2.1.3",
     "next": "13.4.2",
-    "next-auth": "4.22.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
