--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
-    "lucide-react": "^0.105.0-alpha.4",
+    "lucide-react": "0.263.1",
     "ms": "^2.1.3",
     "next": "^13.4.13",
     "next-auth": "^4.22.1",
