--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.2",
@@ -53,6 +55,7 @@
     "@types/ms": "^0.7.31",
     "autoprefixer": "^10.4.14",
     "concurrently": "^7.6.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.27",
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
