--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "@/pages/*": ["pages/*"],
       "@/app/*": ["app/*"],
       "@/lib/*": ["lib/*"],
-      "@/styles/*": ["styles/*"]
+      "@/styles/*": ["styles/*"],
+      "@/types/*": ["types/*"],
+      "@/public/*": ["public/*"],
     },
     "strict": true,
     "forceConsistentCasingInFileNames": true,
