--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.2",
@@ -41,6 +42,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
+    "react-responsive-masonry": "^2.1.7",
     "react-wrap-balancer": "^0.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
@@ -53,6 +55,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/ms": "^0.7.31",
+    "@types/react-responsive-masonry": "^2.1.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^7.6.0",
     "mini-css-extract-plugin": "^2.7.6",
